--- a/Group.html
+++ b/Group.html
@@ -50,6 +50,8 @@
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
+<li><p>Zihan Zhang (Postdoc, co-advised with Jason Lee and Simon Shaolei Du) </p>
+</li>
 <li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc)</p>
 </li>
 </ul>
@@ -77,7 +79,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-16 20:37:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-18 11:39:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
