--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> will join University of Michigan-Ann Arbor as an Assistant Professor in Fall 2023. Congrats, Changxiao! </li>
+    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023. Congrats, Changxiao! </li>
 </ul>
 <ul>
-    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by Philippe Rigollet and Martin Wainwright). Congrats, Yuling! </li>
+    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by Philippe Rigollet and Martin Wainwright). Congrats, Yuling! </li>
 </ul>
 <ul>
     <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congrats, Yanxi!</li>
@@ -180,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-28 06:30:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-08 08:20:22 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
