--- a/Group.html
+++ b/Group.html
@@ -46,7 +46,7 @@
 </li>
 <li><p>Eshaan Nichani (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan, will join University of Wisconsin–Madison as an Assistant Professor in Fall 2024)</p>
+<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan, will join University of Wisconsin–Madison as an Assistant Professor of Statistics in Fall 2024)</p>
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -57,7 +57,7 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor in Fall 2023)</p>
+<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023)</p>
 </li>
 <li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
 </li>
@@ -79,7 +79,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-08 08:21:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-08 08:22:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
