--- a/Group.html
+++ b/Group.html
@@ -42,7 +42,7 @@
 </li>
 <li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
-<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc, co-advised with Yuting Wei)</p>
+<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc, co-advised with Yuting Wei, will join Chinese University of Hong Kong as an Assistant Professor of Statistics in Fall 2023)</p>
 </li>
 <li><p>Eshaan Nichani (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -79,7 +79,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-08 08:22:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-13 07:19:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
