--- a/Group.html
+++ b/Group.html
@@ -36,21 +36,21 @@
 <h1>PhD students and postdocs </h1>
 <h2>Current &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
 <ul>
-<li><p>Yanxi Chen (ECE PhD student at Princeton, co-advised with Vincent Poor)</p>
+<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc, co-advised with Rene Vidal) </p>
 </li>
-<li><p>Hong Hu (Postdoc, co-advised with Yuting Wei)</p>
+<li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Postdoc, co-advised with Yuting Wei)</p>
 </li>
 <li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
 <li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc, co-advised with Yuting Wei, will join Chinese University of Hong Kong as an Assistant Professor of Statistics in Fall 2023)</p>
 </li>
-<li><p>Eshaan Nichani (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
+<li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan, will join University of Wisconsin–Madison as an Assistant Professor of Statistics in Fall 2024)</p>
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p>Zihan Zhang (Postdoc, co-advised with Jason Lee and Simon Shaolei Du) </p>
+<li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with Jason Lee and Simon Shaolei Du) </p>
 </li>
 <li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc)</p>
 </li>
@@ -59,6 +59,8 @@
 <ul>
 <li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023)</p>
 </li>
+<li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
+</li>
 <li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
@@ -66,20 +68,9 @@
 <li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> </p>
 </li>
 </ul>
-<h2>Other student visitors</h2>
-<ul>
-<li><p><a href="https://web.stanford.edu/~chen96/index.html">Chen Cheng</a> (Stanford Statistics)
-
-</p>
-</li>
-<li><p><a href="http://www.andrew.cmu.edu/user/shicongc/">Shicong Cen</a> (CMU ECE)
-
-</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-13 07:21:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-13 09:44:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
