--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2023</h2>
 <ol>
+<li><p><b>Reward-Agnostic Fine-Tuning: Provable Statistical Benefits of Hybrid Reinforcement Learning</b> <br />
+G. Li, W. Zhan, J. D. Lee, Y. Chi, <u>Y. Chen</u>, 2023. <a href="publications/Policy_finetuning.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
 G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
 </p>
@@ -275,7 +279,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-13 09:44:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-17 14:09:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
