--- a/Publications_year.html
+++ b/Publications_year.html
@@ -58,6 +58,10 @@
 G. Li, W. Zhan, J. D. Lee, Y. Chi, <u>Y. Chen</u>, 2023. <a href="publications/Policy_finetuning.pdf">[paper]</a>
 </p>
 </li>
+<li><p><b>The Curious Price of Distributional Robustness in Reinforcement Learning with a Generative Model</b> <br />
+L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, M. Geist, Y. Chi, 2023. <a href="publications/DRO-Simulator.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
 G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
 </p>
@@ -279,7 +283,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-17 14:11:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-25 11:02:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
