--- a/Publications_year.html
+++ b/Publications_year.html
@@ -152,7 +152,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 <li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, accepted to <i>Journal of the American Statistical Association</i>, 2020. <a href="publications/BD_noise.pdf">[paper]</a>
+<li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, <i>Journal of the American Statistical Association</i>, vol. 118, no. 542, pp. 858-868, 2023. <a href="publications/BD_noise.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
@@ -283,7 +283,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-29 15:52:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-30 15:55:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
