--- a/Group.html
+++ b/Group.html
@@ -41,9 +41,8 @@
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Postdoc, co-advised with Yuting Wei)</p>
 </li>
-<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
-</li>
-<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc, co-advised with Yuting Wei, will join Chinese University of Hong Kong as an Assistant Professor of Statistics in Fall 2023)</p>
+<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)
+</p>
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -58,11 +57,14 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023)</p>
+<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Incoming Faculty, Department of Industrial and Operations Engineering, University of Michigan-Ann Arbor)</p>
 </li>
 <li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
 </li>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
+<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Incoming Faculty, Department of Statistics, Chinese University of Hong Kong)</p>
+</li>
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)
+</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
 </li>
@@ -71,7 +73,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-30 15:55:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-30 20:06:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
