--- a/Group.html
+++ b/Group.html
@@ -50,7 +50,7 @@
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with Jason Lee and Simon Shaolei Du) </p>
+<li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
 </li>
 <li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc)</p>
 </li>
@@ -73,7 +73,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-30 20:11:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-30 20:13:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
