--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2023</h2>
 <ol>
+<li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
+G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Reward-Agnostic Fine-Tuning: Provable Statistical Benefits of Hybrid Reinforcement Learning</b> <br />
 G. Li, W. Zhan, J. D. Lee, Y. Chi, <u>Y. Chen</u>, 2023. <a href="publications/Policy_finetuning.pdf">[paper]</a>
 </p>
@@ -283,7 +287,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, accepted to <i>S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-30 20:13:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-15 05:26:06 AKDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
