--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
-<li><p><b>Reinforcement learning</b>
+<li><p><b>Machine learning theory</b>
 </p>
 <ul>
+<li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023. 
+</p>
+</li>
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
@@ -177,7 +180,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-30 20:13:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-15 05:26:06 AKDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
