--- a/Group.html
+++ b/Group.html
@@ -46,8 +46,6 @@
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan, will join University of Wisconsin–Madison as an Assistant Professor of Statistics in Fall 2024)</p>
-</li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
@@ -63,8 +61,9 @@
 </li>
 <li><p><a href="https://ligen12.github.io/">Gen Li</a> (Incoming Faculty, Department of Statistics, Chinese University of Hong Kong)</p>
 </li>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)
-</p>
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
+</li>
+<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (Postdoc at MIT; Incoming Faculty, Department of Statistics, University of Wisconsin–Madison)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
 </li>
@@ -73,7 +72,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-30 20:13:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-15 05:26:06 AKDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
