--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-30 20:13:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-15 05:26:06 AKDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
