--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -40,7 +40,7 @@
 <li><p>JSM 2023, together with Yuting Wei and Yuejie Chi</p>
 </li></ol>
 </li>
-<li><p>Non-asymptotic Analysis for Reinforcement Learning <br /></p>
+<li><p>Non-asymptotic Analysis for Reinforcement Learning <a href="slides/Model_Based_Sigmetrics.pdf">[Part 1]</a><a href="slides/Model_free_Sigmetrics.pdf">[Part 2]</a><a href="slides/Policy_Optimization_Sigmetrics.pdf">[Part 3]</a> <br /></p>
 <ol>
 <li><p>SIGMETRICS 2023, together with Yuting Wei and Yuejie Chi </p>
 </li></ol>
@@ -258,7 +258,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-15 22:39:22 AKDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-23 10:49:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
