--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-15 22:39:22 AKDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-23 10:49:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
