--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li><a href="https://ligen12.github.io/"> Gen Li</a> will join Chinese University of Hong Kong (CUHK) as an Assistant Professor of Statistics in Fall 2023. Congrats, Gen! </li>
-</ul>
-<ul>
     <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023. Congrats, Changxiao! </li>
 </ul>
 <ul>
-    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by Philippe Rigollet and Martin Wainwright). Congrats, Yuling! </li>
+    <li><a href="https://ligen12.github.io/"> Gen Li</a> will join Chinese University of Hong Kong (CUHK) as an Assistant Professor of Statistics in Fall 2023. Congrats, Gen! </li>
+</ul>
+<ul>
+    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
+</ul>
+<ul>
+    <li><a href="https://scholar.princeton.edu/qyu/"> Qian Yu</a> will join UCSB as an Assistant Professor of Electrical and Computer Engineering in Fall 2023. Congrats, Qian! </li>
 </ul>
 <ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods.</li>
@@ -180,7 +183,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-23 11:08:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-23 20:02:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
