--- a/Group.html
+++ b/Group.html
@@ -63,7 +63,7 @@
 </li>
 <li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
 </li>
-<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (Postdoc at MIT; Incoming Faculty, Department of Statistics, University of Wisconsin–Madison)</p>
+<li><p><a href="https://yulingy.github.io/">Yuling Yan</a> (Postdoc at MIT; Incoming Faculty, Department of Statistics, University of Wisconsin–Madison)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
 </li>
@@ -72,7 +72,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-23 20:02:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-24 11:56:59 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
