--- a/Software.html
+++ b/Software.html
@@ -65,7 +65,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-23 20:02:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-24 11:56:59 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
