--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://ligen12.github.io/"> Gen Li</a> will join Chinese University of Hong Kong (CUHK) as an Assistant Professor of Statistics in Fall 2023. Congrats, Gen! </li>
 </ul>
 <ul>
-    <li><a href="https://yulingy.mycpanel.princeton.edu/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
+    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
 </ul>
 <ul>
     <li><a href="https://scholar.princeton.edu/qyu/"> Qian Yu</a> will join UCSB as an Assistant Professor of Electrical and Computer Engineering in Fall 2023. Congrats, Qian! </li>
@@ -183,7 +183,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-23 20:02:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-24 11:56:59 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
