--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://scholar.princeton.edu/qyu/"> Qian Yu</a> will join UCSB as an Assistant Professor of Electrical and Computer Engineering in Fall 2023. Congrats, Qian! </li>
 </ul>
 <ul>
-    <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods.</li>
+    <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. See <a href="slides/spectral_method_slides.pdf"> slides </a> for PKU summer school on theoretical statistics.  </li>
 </ul>
 <br>
 </p>
@@ -183,7 +183,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-24 11:59:26 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-06 14:54:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
