--- a/Publications_year.html
+++ b/Publications_year.html
@@ -41,7 +41,7 @@
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="130 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ol>
-<li><p><b>Spectral Methods for Data Science: A Statistical Perspective</b> <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Foundations and Trends in Machine Learning</i>, vol. 14, no. 5, pp. 566–806, 2021. <a href="publications/SpectralMethods.pdf">[Arxiv]</a><a href="https://www.nowpublishers.com/article/Details/MAL-079">[FnT link]</a> 
+<li><p><b>Spectral Methods for Data Science: A Statistical Perspective</b> <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Foundations and Trends in Machine Learning</i>, vol. 14, no. 5, pp. 566–806, 2021. <a href="publications/SpectralMethods.pdf">[Arxiv]</a><a href="https://www.nowpublishers.com/article/Details/MAL-079">[FnT link]</a><a href="slides/spectral_method_slides.pdf">[Slides for PKU short course]</a> 
 </p>
 </li>
 <li><p><b>Nonconvex Optimization Meets Low-Rank Matrix Factorization: An Overview</b>  <br />  Y. Chi, Y. Lu, <u>Y. Chen</u>, <i>IEEE Transactions on Signal Processing</i>, vol. 67, no. 20, pp. 5239-5269, October 2019 <b>(invited overview article)</b>.  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8811622">[TSP version]</a><a href="publications/NcxOverview_Arxiv.pdf">[Arxiv]</a><a href="slides/Nonconvex_overview_slides.pdf">[slides]</a></p>
@@ -284,7 +284,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-06 14:54:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-06 14:58:06 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
