--- a/Group.html
+++ b/Group.html
@@ -67,12 +67,12 @@
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
 </li>
-<li><p><a href="https://scholar.princeton.edu/qyu/">Qian Yu</a> (Incoming Faculty, Department of Electrical and Computer Engineering, University of California, Santa Barbara) </p>
+<li><p><a href="https://scholar.princeton.edu/qyu/">Qian Yu</a> (Faculty, Department of Electrical and Computer Engineering, University of California, Santa Barbara) </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-06 14:58:42 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-06 15:05:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
