--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -35,6 +35,11 @@
 </script>
 <h1>Tutorials, Short Courses and Lecture Series</h1>
 <ul>
+<li><p><a href="slides/spectral_method_slides.pdf">Spectral Methods for Data Science: A Statistical Perspective</a> <br /></p>
+<ul>
+<li><p>2023 Summer School on Theoretical Statistics, PKU BICMR & Math</p>
+</li></ul>
+</li>
 <li><p>Statistical and Algorithmic Foundations of Reinforcement Learning <br /></p>
 <ul>
 <li><p>JSM 2023, together with Yuting Wei and Yuejie Chi</p>
@@ -258,7 +263,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-06 15:05:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-06 15:12:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
