--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Spectral methods</b>
 </p>
 <ul>
-<li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> 2023. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a>
+<li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> 2023. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> 2021. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a>
+<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> 2021. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="slides/PCA_inference_short.pdf">[slides]</a>
 
 
 
@@ -183,7 +183,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-06 15:12:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-12 14:26:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
