--- a/Publications_year.html
+++ b/Publications_year.html
@@ -71,7 +71,7 @@ G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-e
 </p>
 </li>
 <li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
-Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/deflated_heteroPCA.pdf">[paper]</a>
+Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/deflated_heteroPCA.pdf">[paper]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
@@ -108,7 +108,7 @@ H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal
 <h2>2021</h2>
 <ol>
 <li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
-Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a>
+Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a><a href="slides/PCA_inference_short.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, accepted to <i>Mathematical Programming</i>, 2023+. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
@@ -284,7 +284,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-06 15:12:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-12 14:26:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
