--- a/Education.html
+++ b/Education.html
@@ -23,15 +23,14 @@
 <div class="menu-item"><a href="Workshops.html">Workshops</a></div>
 </td>
 <td id="layout-content">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y92NF7Q0DZ"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'UA-3857157-7', 'auto');
-  ga('send', 'pageview');
-
+  gtag('config', 'G-Y92NF7Q0DZ');
 </script>
 <h1>Appointments and Education </h1>
 <h2>University of Pennsylvania (01/2022 &ndash; present)</h2>
@@ -104,7 +103,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-12 15:59:10 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-17 08:53:04 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
