--- a/Publications_year.html
+++ b/Publications_year.html
@@ -80,7 +80,7 @@ G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/
 <h2>2022</h2>
 <ol>
 <li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
-G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  accepted to <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022 <b>(selected as oral)</b>. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
+G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022 <b>(selected as oral)</b>. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
@@ -92,7 +92,7 @@ G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  2022. <a href="publications/off
 </p>
 </li>
 <li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
-Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/asyn_Q_pessimism.pdf">[paper]</a>
+Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, accepted to <i>IEEE Transactions on Information Theory</i>, 2023. <a href="publications/asyn_Q_pessimism.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Pessimistic Q-Learning for Offline Reinforcement Learning: Towards Optimal Sample Complexity</b> <br />
@@ -283,7 +283,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-17 08:54:42 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-25 06:44:48 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
