--- a/Publications_year.html
+++ b/Publications_year.html
@@ -74,7 +74,12 @@ Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/deflated_heteroPCA.pdf">[pa
 </p>
 </li>
 <li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
-G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a></p>
+G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>Why MagNet: Quantifying the Complexity of Modeling Power Magnetic Material Characteristics</b> <br />
+D. Serrano, H. Li, S. Wang, T. Guillod, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
+accepted to <i>IEEE Transactions on Power Electronics</i>, 2023 <a href="https://ieeexplore.ieee.org/document/10169101">[paper]</a></p>
 </li>
 </ol>
 <h2>2022</h2>
@@ -283,7 +288,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-25 06:49:56 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-25 11:32:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
