--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2023</h2>
 <ol>
+<li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
+Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
 G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.pdf">[paper]</a>
 </p>
@@ -288,7 +292,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-25 11:32:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-26 06:50:06 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
