--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Machine learning theory</b>
 </p>
 <ul>
+<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023. 
+</p>
+</li>
 <li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023. 
 </p>
 </li>
@@ -182,7 +185,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-25 11:32:44 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-26 06:50:05 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
