--- a/Publications_year.html
+++ b/Publications_year.html
@@ -119,7 +119,7 @@ H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal
 Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, accepted to <i>Mathematical Programming</i>, 2023+. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
+<li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <i>Mathematical Programming</i>, vol. 201, pp. 707-802, 2023. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SoftmaxPG_LB_COLT.pdf">COLT 2021</a> 
 </p>
 </li>
@@ -292,7 +292,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-26 09:25:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-26 10:17:02 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
