--- a/Group.html
+++ b/Group.html
@@ -54,11 +54,11 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Incoming Faculty, Department of Industrial and Operations Engineering, University of Michigan-Ann Arbor)</p>
+<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Faculty, Department of Industrial and Operations Engineering, University of Michigan-Ann Arbor)</p>
 </li>
 <li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
 </li>
-<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Incoming Faculty, Department of Statistics, Chinese University of Hong Kong)</p>
+<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Faculty, Department of Statistics, Chinese University of Hong Kong)</p>
 </li>
 <li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
 </li>
@@ -71,7 +71,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-27 09:58:39 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-31 17:56:04 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
