--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023. Congrats, Changxiao! </li>
 </ul>
 <ul>
-    <li><a href="https://ligen12.github.io/"> Gen Li</a> will join Chinese University of Hong Kong (CUHK) as an Assistant Professor of Statistics in Fall 2023. Congrats, Gen! </li>
+    <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong (CUHK) as an Assistant Professor of Statistics. Congrats, Gen! </li>
 </ul>
 <ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
@@ -185,7 +185,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-31 17:56:03 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-01 14:44:33 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
