--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -262,7 +262,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-01 14:44:33 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-13 08:58:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
