--- a/Publications_year.html
+++ b/Publications_year.html
@@ -146,25 +146,25 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <h2>2020</h2>
 <ol>
+<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>, accepted to <i>Operations Research</i>,  2023+. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/model_base_RL_neurips.pdf">NeurIPS 2020</a>
+</p>
+</li>
+<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
+</p>
+</li>
+<li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, <i>Journal of the American Statistical Association</i>, vol. 118, no. 542, pp. 858-868, 2023. <a href="publications/BD_noise.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
+</p>
+</li>
 <li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 68, no. 1, pp. 448-473, Jan. 2022. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/AsynQlearning_NeurIPS.pdf">NeurIPS 2020</a>
 </p>
 </li>
 <li><p><b>Uncertainty Quantification for Nonconvex Tensor Completion: Confidence Intervals, Heteroscedasticity and Optimality</b> <br />  C. Cai,  H. V. Poor, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 69, no. 1, pp. 407-452, Jan. 2023. <a href="publications/TC_inference.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a> 
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/TC_inference_ICML.pdf">ICML 2020</a>
-</p>
-</li>
-<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>, accepted to <i>Operations Research</i>,  2023+. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/model_base_RL_neurips.pdf">NeurIPS 2020</a>
-</p>
-</li>
-<li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
-</p>
-</li>
-<li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, <i>Journal of the American Statistical Association</i>, vol. 118, no. 542, pp. 858-868, 2023. <a href="publications/BD_noise.pdf">[paper]</a>
-</p>
-</li>
-<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
 </p>
 </li>
 <li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 11, pp. 7380-7419, Nov. 2021. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
@@ -182,17 +182,17 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexTC_NIPS.pdf">NeurIPS 2019</a>
 </p>
 </li>
-<li><p><b>Subspace Estimation from Unbalanced and Incomplete Data Matrices:  $\ell_{2,\infty}$ Statistical Guarantees </b> <br />  C. Cai, G. Li, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 49, no. 2, pp. 944-967, 2021. <a href="publications/unbalanced_PCA.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-2/Subspace-estimation-from-unbalanced-and-incomplete-data-matrices--%e2%84%932/10.1214/20-AOS1986.full">[AoS version]</a>
-</p>
-</li>
-<li><p><b>Communication-Efficient Distributed Optimization in Networks with Gradient Tracking and Variance Reduction</b> <br /> B. Li, S. Cen, <u>Y. Chen</u>, Y. Chi,  <i>Journal of Machine Learning Research</i>, vol. 21, no. 180, pp. 1-51, 2020. <a href="https://arxiv.org/abs/1909.05844">[paper]</a><a href="https://github.com/liboyue/Network-Distributed-Algorithm">[code]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in AISTATS 2020
-</p>
-</li>
 <li><p><b>Inference and Uncertainty Quantification for Noisy Matrix Completion</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <i>Proceedings of the National Academy of Sciences (PNAS)</i>, vol. 116, no. 46, pp. 22931–22937, Nov. 2019 (direct submission). <a href="https://www.pnas.org/content/pnas/116/46/22931.full.pdf">[PNAS version]</a><a href="publications/MC_inference.pdf">[full paper]</a><a href="slides/NoisyMC_Inference_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Noisy Matrix Completion: Understanding Statistical Guarantees for  Convex Relaxation via Nonconvex Optimization</b> <br /> <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, Y. Yan,  <i>SIAM Journal on Optimization</i>, vol. 30, no. 4, pp. 3098–3121, 2020. <a href="publications/NoisyMC.pdf">[paper]</a><a href="https://epubs.siam.org/doi/pdf/10.1137/19M1290000">[SIOPT version]</a><a href="slides/NoisyMC_slides.pdf">[slides]</a></p>
+<li><p><b>Subspace Estimation from Unbalanced and Incomplete Data Matrices:  $\ell_{2,\infty}$ Statistical Guarantees </b> <br />  C. Cai, G. Li, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 49, no. 2, pp. 944-967, 2021. <a href="publications/unbalanced_PCA.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-2/Subspace-estimation-from-unbalanced-and-incomplete-data-matrices--%e2%84%932/10.1214/20-AOS1986.full">[AoS version]</a>
+</p>
+</li>
+<li><p><b>Noisy Matrix Completion: Understanding Statistical Guarantees for  Convex Relaxation via Nonconvex Optimization</b> <br /> <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, Y. Yan,  <i>SIAM Journal on Optimization</i>, vol. 30, no. 4, pp. 3098–3121, 2020. <a href="publications/NoisyMC.pdf">[paper]</a><a href="https://epubs.siam.org/doi/pdf/10.1137/19M1290000">[SIOPT version]</a><a href="slides/NoisyMC_slides.pdf">[slides]</a>
+</p>
+</li>
+<li><p><b>Communication-Efficient Distributed Optimization in Networks with Gradient Tracking and Variance Reduction</b> <br /> B. Li, S. Cen, <u>Y. Chen</u>, Y. Chi,  <i>Journal of Machine Learning Research</i>, vol. 21, no. 180, pp. 1-51, 2020. <a href="https://arxiv.org/abs/1909.05844">[paper]</a><a href="https://github.com/liboyue/Network-Distributed-Algorithm">[code]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in AISTATS 2020</p>
 </li>
 </ol>
 <h2>2018</h2>
@@ -200,11 +200,11 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <li><p><b>Gradient Descent with Random Initialization: Fast Global Convergence for Nonconvex Phase Retrieval</b>  <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Mathematical Programming</i>, vol. 176, no. 1-2, pp. 5-37, July 2019.  <a href="publications/random_init_PR.pdf">[paper]</a><a href="publications/random_init_PR_MP.pdf">[MP version]</a><a href="slides/random_init_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Nonconvex Matrix Factorization from Rank-One Measurements</b> <br />  Y. Li, C. Ma, <u>Y. Chen</u>, Y. Chi,  <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 3, pp. 1928-1950, March 2021. <a href="https://arxiv.org/abs/1802.06286">[paper]</a> 
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexRankOne_AISTATS.pdf">AISTATS 2019</a>
+<li><p><b>Asymmetry Helps: Eigenvalue and Eigenvector Analyses of Asymmetrically Perturbed Low-Rank Matrices</b> <br /> <u>Y. Chen</u>, C. Cheng, J. Fan, <i>Annals of Statistics</i>, vol. 49, no. 1, pp. 435-458, 2021. <a href="publications/asymmetric_eigens.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-1/Asymmetry-helps--Eigenvalue-and-eigenvector-analyses-of-asymmetrically-perturbed/10.1214/20-AOS1963.full">[AoS version]</a><a href="slides/asymmetry_eigs_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Asymmetry Helps: Eigenvalue and Eigenvector Analyses of Asymmetrically Perturbed Low-Rank Matrices</b> <br /> <u>Y. Chen</u>, C. Cheng, J. Fan, <i>Annals of Statistics</i>, vol. 49, no. 1, pp. 435-458, 2021. <a href="publications/asymmetric_eigens.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-1/Asymmetry-helps--Eigenvalue-and-eigenvector-analyses-of-asymmetrically-perturbed/10.1214/20-AOS1963.full">[AoS version]</a><a href="slides/asymmetry_eigs_slides.pdf">[slides]</a>
+<li><p><b>Nonconvex Matrix Factorization from Rank-One Measurements</b> <br />  Y. Li, C. Ma, <u>Y. Chen</u>, Y. Chi,  <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 3, pp. 1928-1950, March 2021. <a href="https://arxiv.org/abs/1802.06286">[paper]</a> 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexRankOne_AISTATS.pdf">AISTATS 2019</a>
 </p>
 </li>
 </ol>
@@ -292,7 +292,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-01 14:44:33 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-13 08:58:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
