--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-01 14:44:33 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-13 08:58:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
