--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> will join University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering in Fall 2023. Congrats, Changxiao! </li>
+    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the 2024 IMS Lawrence D. Brown Ph. D. Student Award. Congrats, Yuling! </li>
 </ul>
 <ul>
-    <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong (CUHK) as an Assistant Professor of Statistics. Congrats, Gen! </li>
+    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> has joined University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering. Congrats, Changxiao! </li>
+</ul>
+<ul>
+    <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong as an Assistant Professor of Statistics. Congrats, Gen! </li>
 </ul>
 <ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
 </ul>
 <ul>
-    <li><a href="https://scholar.princeton.edu/qyu/"> Qian Yu</a> will join UCSB as an Assistant Professor of Electrical and Computer Engineering in Fall 2023. Congrats, Qian! </li>
+    <li><a href="https://scholar.princeton.edu/qyu/"> Qian Yu</a> has joined UCSB as an Assistant Professor of Electrical and Computer Engineering. Congrats, Qian! </li>
 </ul>
 <ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. See <a href="slides/spectral_method_slides.pdf"> slides </a> for PKU summer school on theoretical statistics.  </li>
@@ -185,7 +188,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-13 09:01:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-27 20:03:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
