--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 
 <h2>Topic courses I have developed</h2>
 <ul>
+<li><p>Fall 2023: <a href="https://yuxinchen2020.github.io/large_scale_optimization/index.html">STAT9910-303: Large-Scale Optimization for Data Science</a> (UPenn)  <br /></p>
+</li>
 <li><p>Spring 2022: <a href="stat991_math_data/index.html">STAT991-302: Mathematics of High-Dimensional Data</a> (UPenn) <br /></p>
 </li>
 <li><p>Fall 2020: <a href="ele520_math_data/index.html">ELE520: Mathematics of Data Science</a> (Princeton) <br /> </p>
-</li>
-<li><p>Fall 2019: <a href="ele522_optimization/index.html">ELE522: Large-Scale Optimization for Data Science</a> (Princeton)  <br /></p>
 </li>
 </ul>
 <h2>Selected recent papers</h2>
@@ -188,7 +188,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-27 20:03:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-29 06:23:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
