--- a/large_scale_optimization/index.html
+++ b/large_scale_optimization/index.html
@@ -28,7 +28,8 @@
 <img src="nonconvex_surface.png" alt="alt text" width="500 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <h2>Course Description</h2>
-<p>This graduate-level course introduces optimization methods that are suitable for large-scale problems arising in data science and machine learning applications. We will explore several algorithms that are efficient for both smooth and nonsmooth problems, including gradient methods, proximal methods, mirror descent, Nesterov's accelerated methods, ADMM, quasi-Newton methods, stochastic optimization, variance reduction, extragradient methods, as well as distributed optimization.  </p>
+<p>This graduate-level course introduces optimization methods that are suitable for large-scale problems arising in data science and machine learning applications. We will explore several algorithms that are efficient for both smooth and nonsmooth problems, including gradient methods, proximal methods, mirror descent, Nesterov's accelerated methods, ADMM, quasi-Newton methods, stochastic optimization, variance reduction, extragradient methods, as well as distributed optimization. 
+We will also discuss the efficacy of these methods in concrete data science problems.  </p>
 <h2>Lectures</h2>
 <ul>
 <li><p>Tue, Thu 3:30 PM - 5 PM.</p>
@@ -48,7 +49,7 @@
 <h2>Announcements</h2>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-28 21:47:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-29 06:27:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
