--- a/Publications_year.html
+++ b/Publications_year.html
@@ -83,7 +83,12 @@ G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/
 </li>
 <li><p><b>Why MagNet: Quantifying the Complexity of Modeling Power Magnetic Material Characteristics</b> <br />
 D. Serrano, H. Li, S. Wang, T. Guillod, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
-accepted to <i>IEEE Transactions on Power Electronics</i>, 2023 <a href="https://ieeexplore.ieee.org/document/10169101">[paper]</a></p>
+accepted to <i>IEEE Transactions on Power Electronics</i>, 2023 <a href="https://ieeexplore.ieee.org/document/10169101">[paper]</a>
+</p>
+</li>
+<li><p><b>How MagNet: Machine Learning Framework for Modeling Power Magnetic Material Characteristics</b> <br />
+H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
+accepted to <i>IEEE Transactions on Power Electronics</i>, 2023 <a href="https://ieeexplore.ieee.org/abstract/document/10232863/">[paper]</a></p>
 </li>
 </ol>
 <h2>2022</h2>
@@ -292,7 +297,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-29 06:23:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-04 13:49:00 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
